--- a/main.CSS
+++ b/main.CSS
@@ -2,7 +2,7 @@ h1 {
     font-size: 26pt;
         }
 h2 {
-    color: darkolivegreen;        
+    color: darkolivegreen !important;      
         }
 h3 {
     color: forestgreen;       
